Fixing animation when playing song
made an oopsie daisy mistake by leaving the dot out in ./assets/img/songplaying.gif

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="row">
                 <div class="col">
-                    <img id="animation" style="visibility:hidden;width: 100px;" src="/assets/img/songplaying.gif">
+                    <img id="animation" style="visibility:hidden;width: 100px;" src="./assets/img/songplaying.gif">
                 </div>
                 <div class="col">
                     <img id="coverart" style="    visibility: visible;
