Added OpenMusic Logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
     <div class="container">
-        <h3>Open Music</h3>
+        <img class="img-fluid" style="height: 150px;cursor: pointer;" onclick="document.location = 'https://github.com/ADGSTUDIOS/OpenMusic' " src="./assets/img/openmusiclogo.svg">
         <div id="Controls">
 
         </div>
